; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_sync.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@SPA_FEATURE_BOOKMARKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @dsl_bookmark_create_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsl_bookmark_create_sync(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call %struct.TYPE_4__* @dmu_tx_pool(i32* %9)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @SPA_FEATURE_BOOKMARKS, align 4
  %14 = call i32 @spa_feature_is_enabled(i32 %12, i32 %13)
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32* @nvlist_next_nvpair(i32 %18, i32* null)
  store i32* %19, i32** %6, align 8
  br label %20

20:                                               ; preds = %30, %2
  %21 = load i32*, i32** %6, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %36

23:                                               ; preds = %20
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @nvpair_name(i32* %24)
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @fnvpair_value_string(i32* %26)
  %28 = load i32*, i32** %4, align 8
  %29 = call i32 @dsl_bookmark_create_sync_impl(i32 %25, i32 %27, i32* %28, i32 0, i32* null, i32* null, i32* null)
  br label %30

30:                                               ; preds = %23
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32*, i32** %6, align 8
  %35 = call i32* @nvlist_next_nvpair(i32 %33, i32* %34)
  store i32* %35, i32** %6, align 8
  br label %20

36:                                               ; preds = %20
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @spa_feature_is_enabled(i32, i32) #1

declare dso_local %struct.TYPE_4__* @dmu_tx_pool(i32*) #1

declare dso_local i32* @nvlist_next_nvpair(i32, i32*) #1

declare dso_local i32 @dsl_bookmark_create_sync_impl(i32, i32, i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @nvpair_name(i32*) #1

declare dso_local i32 @fnvpair_value_string(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
